--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="login-container">
-    <h2>Login</h2>
+    <img src="{{ url_for('static', filename='images/company-logo.png')}}" alt="Spectra Tech Manufacturing">
     <form method="post">
       <label for="username">Username</label>
       <select name="username" id="username">
