--- a/static/css/style.css
+++ b/static/css/style.css
@@ -139,3 +139,17 @@ body {
   list-style: none;
   padding: 0;
 }
+
+.preview-wrapper {
+  margin-top: 20px;
+}
+
+.preview-card {
+  border: 2px solid #000;
+  padding: 10px;
+}
+
+.preview-info {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
