--- a/templates/base.html
+++ b/templates/base.html
@@ -51,5 +51,6 @@
     {% block content %}{% endblock %}
   </div>
   <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+  {% block scripts %}{% endblock %}
 </body>
 </html>
