--- a/templates/home.html
+++ b/templates/home.html
@@ -2,5 +2,14 @@
 
 {% block content %}
 <h1>Welcome to MOAA</h1>
-<p>Home page content will go here.</p>
+<div id="moat-preview" class="preview-wrapper">
+  <div id="moat-info" class="preview-info"></div>
+  <div class="preview-card">
+    <canvas id="moatChart"></canvas>
+  </div>
+</div>
+{% endblock %}
+
+{% block scripts %}
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 {% endblock %}
