Added UI Updates

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
         <li class="nav-item">
           <a href="#">Analysis <span class="arrow">&#9662;</span></a>
           <div class="dropdown">
-            <a href="#">PPM analysis</a>
+            <a href="{{ url_for('main.ppm_analysis') }}">PPM analysis</a>
             <a href="#">AOI Grades</a>
             <a href="#">AOI Daily Reports</a>
             <a href="#">FI Daily Reports</a>
