--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,10 @@
 {% block content %}
 <h1>Welcome to MOAA</h1>
 <div id="moat-preview" class="preview-wrapper">
-  <div id="moat-info" class="preview-info"></div>
+  <div class="preview-info">
+    <div id="moat-title" style="font-size:14px;">Average False Calls Preview</div>
+    <div id="moat-info" style="font-size:12px;color:#333;"></div>
+  </div>
   <div class="preview-card">
     <canvas id="moatChart"></canvas>
   </div>
