Add downloads for expanded chart and table

--- a/templates/ppm_analysis.html
+++ b/templates/ppm_analysis.html
@@ -188,6 +188,10 @@
     <div class="modal-chart-box">
       <canvas id="ppmChartExpanded"></canvas>
     </div>
+    <div class="field-row" style="margin-top:10px;">
+      <button type="button" id="modal-download-chart">Download Chart</button>
+      <button type="button" id="modal-download-csv">Download CSV</button>
+    </div>
     <div style="margin-top:10px;" class="section-title">Data</div>
     <table class="data-table">
       <thead><tr><th>Date</th><th>Value</th></tr></thead>
