Add save controls and update saved query handling

--- a/templates/ppm_analysis.html
+++ b/templates/ppm_analysis.html
@@ -144,6 +144,11 @@
     </div>
 
     <div class="field-row" style="margin-top:12px;">
+      <div class="field" style="flex:1;">
+        <label for="save-name">Save As</label>
+        <input id="save-name" placeholder="Chart name" />
+      </div>
+      <button type="button" id="save-chart">Save</button>
       <button type="button" id="run-chart">Run</button>
     </div>
   </div>
