Implement AOI daily reports chart and builder

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
           <div class="dropdown">
             <a href="{{ url_for('main.ppm_analysis') }}">PPM analysis</a>
             <a href="#">AOI Grades</a>
-            <a href="#">AOI Daily Reports</a>
+            <a href="{{ url_for('main.aoi_daily_reports') }}">AOI Daily Reports</a>
             <a href="#">FI Daily Reports</a>
           </div>
         </li>
