Seed shift comparison AOI saved query

--- a/templates/aoi_daily_reports.html
+++ b/templates/aoi_daily_reports.html
@@ -93,6 +93,7 @@
         <canvas id="aoiChart"></canvas>
       </div>
       <div id="chart-description-result" class="preview-info" style="margin-top:4px;"></div>
+      <div id="aoi-info" class="preview-info" style="margin-top:4px;"></div>
     </div>
   </div>
 
@@ -112,7 +113,7 @@
     </div>
     <div style="margin-top:10px;" class="section-title">Data</div>
     <table class="data-table">
-      <thead><tr><th>Operator</th><th>Accepted</th><th>Rejected</th><th>Accepted %</th><th>Rejected %</th></tr></thead>
+      <thead><tr><th id="data-label-header">Operator</th><th>Accepted</th><th>Rejected</th><th>Accepted %</th><th>Rejected %</th></tr></thead>
       <tbody id="data-tbody"></tbody>
     </table>
   </div>
