--- a/static/css/style.css
+++ b/static/css/style.css
@@ -217,22 +217,22 @@ body {
 /* Tab styling for Chart Builder / Upload */
 .tab-bar {
   display: flex;
-  border-bottom: 2px solid #000;
+  /* border-bottom: 2px solid #000; */
   margin: -10px -10px 10px -10px;
 }
 
 .tab {
   padding: 6px 12px;
   cursor: pointer;
-  border: 2px solid #000;
-  border-bottom: 0;
-  background: #E8E8E8;
-  margin-right: 4px;
+  border-bottom: 2px solid #000;
+  border-right: 2px solid #000;
+  border-left: 2px solid #000;
+  background: #dfdfdf;
 }
 
 .tab.active {
   background: #f5f5f5;
-  border-bottom: 2px solid #f5f5f5;
+  border: 0;
 }
 
 .tab-content { display: none; }
