--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
             <a href="{{ url_for('main.ppm_analysis') }}">PPM analysis</a>
             <a href="#">AOI Grades</a>
             <a href="{{ url_for('main.aoi_daily_reports') }}">AOI Daily Reports</a>
-            <a href="#">FI Daily Reports</a>
+            <a href="{{ url_for('main.fi_daily_reports') }}">FI Daily Reports</a>
           </div>
         </li>
         <li class="nav-item">
