--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,24 @@
     <canvas id="moatChart"></canvas>
   </div>
 </div>
+<div id="aoi-preview" class="preview-wrapper">
+  <div class="preview-info">
+    <div id="aoi-title" style="font-size:14px;">AOI Yield Preview</div>
+    <div id="aoi-info" style="font-size:12px;color:#333;"></div>
+  </div>
+  <div class="preview-card">
+    <canvas id="aoiChart"></canvas>
+  </div>
+</div>
+<div id="fi-preview" class="preview-wrapper">
+  <div class="preview-info">
+    <div id="fi-title" style="font-size:14px;">FI Yield Preview</div>
+    <div id="fi-info" style="font-size:12px;color:#333;"></div>
+  </div>
+  <div class="preview-card">
+    <canvas id="fiChart"></canvas>
+  </div>
+</div>
 {% endblock %}
 
 {% block scripts %}
