--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
           <a href="#">Analysis <span class="arrow">&#9662;</span></a>
           <div class="dropdown">
             <a href="{{ url_for('main.ppm_analysis') }}">PPM analysis</a>
-            <a href="#">AOI Grades</a>
+            <a href="{{ url_for('main.aoi_grades_page') }}">AOI Grades</a>
             <a href="{{ url_for('main.aoi_daily_reports') }}">AOI Daily Reports</a>
             <a href="{{ url_for('main.fi_daily_reports') }}">FI Daily Reports</a>
           </div>
