added pointer cursor

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -205,6 +205,10 @@ h2 {
   overflow:scroll;
 }
 
+.analysis-top-right li:hover {
+  cursor: pointer;
+}
+
 .analysis-bottom-right {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
