Add integrated report stub and navigation

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,12 @@
             <a href="#"><em>SPC Dashboard</em></a>
           </div>
         </li>
+        <li class="nav-item">
+          <a href="#">Reports <span class="arrow">&#9662;</span></a>
+          <div class="dropdown">
+            <a href="{{ url_for('main.integrated_report') }}">Integrated Report</a>
+          </div>
+        </li>
       </ul>
     </div>
     <div class="nav-right">
