Add PDF preview and reuse for download

--- a/templates/integrated_report.html
+++ b/templates/integrated_report.html
@@ -18,6 +18,7 @@
 </div>
 
 <div id="report-preview" style="display:none; margin-top:20px;">
+  <iframe id="pdf-preview" style="display:none; width:100%; height:600px; border:none;"></iframe>
   <div class="section-card">
     <div class="section-title">True Yield</div>
     <canvas id="yieldChart"></canvas>
