Add metrics and problem assemblies table

--- a/templates/integrated_report.html
+++ b/templates/integrated_report.html
@@ -29,6 +29,12 @@
   <div class="chart-block">
     <canvas id="modelFalseCallsChart"></canvas>
     <p id="modelFalseCallsDesc"></p>
+    <table id="problemAssemblies" class="data-table">
+      <thead>
+        <tr><th>Assembly</th><th>False Calls/Board</th></tr>
+      </thead>
+      <tbody></tbody>
+    </table>
   </div>
 </div>
 
