Add yield and operator detail tables and export support

--- a/templates/integrated_report.html
+++ b/templates/integrated_report.html
@@ -22,12 +22,14 @@
       <canvas id="yieldTrendChart"></canvas>
       <div class="chart-summary">
         <p id="yieldTrendDesc"></p>
+        <table id="yieldTrendTable" class="data-table"><tbody></tbody></table>
       </div>
     </div>
     <div class="chart-block">
       <canvas id="operatorRejectChart"></canvas>
       <div class="chart-summary">
         <p id="operatorRejectDesc"></p>
+        <table id="operatorRejectTable" class="data-table"><tbody></tbody></table>
       </div>
     </div>
     <div class="chart-block">
