Add reject rate column to integrated report

--- a/templates/integrated_report.html
+++ b/templates/integrated_report.html
@@ -29,7 +29,17 @@
       <canvas id="operatorRejectChart"></canvas>
       <div class="chart-summary">
         <p id="operatorRejectDesc"></p>
-        <table id="operatorRejectTable" class="data-table"><tbody></tbody></table>
+        <table id="operatorRejectTable" class="data-table">
+          <thead>
+            <tr>
+              <th>Operator</th>
+              <th>Inspected</th>
+              <th>Rejected</th>
+              <th>Reject %</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
       </div>
     </div>
     <div class="chart-block">
