Add FC vs NG rate chart and backend data

--- a/templates/integrated_report.html
+++ b/templates/integrated_report.html
@@ -49,6 +49,13 @@
         <table id="problem-assemblies" class="data-table"><tbody></tbody></table>
       </div>
     </div>
+    <div class="chart-block">
+      <canvas id="fcVsNgRateChart"></canvas>
+      <div class="chart-summary">
+        <p id="fcVsNgDesc"></p>
+        <table id="fcVsNgRateTable" class="data-table"><tbody></tbody></table>
+      </div>
+    </div>
   </div>
 
 <div class="field-row" id="download-controls">
