--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  padding: 20px;
+  padding: 20px 100px;
+  background: #dddddd;
 }
 
 h2 {
@@ -12,7 +13,7 @@ h2 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #e8e8e800;
+  background: #ffffff00;
   padding: 0 20px;
   margin: 0;
 }
@@ -51,12 +52,12 @@ h2 {
   color: #000;
   text-decoration: none;
   transition: color 0.3s ease;
-  background: #dfdfdf;
+  background: #ffffff;
 }
 
 .nav-item:hover > a {
   color: #275317;
-  background: #ffffff;
+  background: #dddddd;
   border: 1px solid #000;
   border-top: none;
   border-bottom: none;
@@ -220,7 +221,7 @@ h2 {
 
 .section-card {
   border: 2px solid #000;
-  background: #f5f5f5;
+  background: #ffffff;
   padding: 10px;
 }
 
