--- a/templates/aoi_daily_reports.html
+++ b/templates/aoi_daily_reports.html
@@ -146,5 +146,6 @@
 {% block scripts %}
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.5.28/dist/jspdf.plugin.autotable.min.js"></script>
 <script src="{{ url_for('static', filename='js/aoi.js') }}"></script>
 {% endblock %}
