--- a/templates/report.html
+++ b/templates/report.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <img src="{{ url_for('static', filename='images/logo.svg') }}" alt="Logo">
+        <img src="{{ url_for('static', filename='images/company-logo.png') }}" alt="Company logo">
         <h1>Report</h1>
     </header>
     <main>
