--- a/templates/integrated_report.html
+++ b/templates/integrated_report.html
@@ -81,6 +81,7 @@
     <select id="file-format">
       <option value="pdf">pdf</option>
       <option value="xlsx">xlsx</option>
+      <option value="html">html</option>
     </select>
   </div>
   <button id="download-report">Download</button>
