--- a/templates/report/index.html
+++ b/templates/report/index.html
@@ -17,5 +17,12 @@
     {% include 'report/model_false_calls.html' %}
     {% include 'report/fc_vs_ng_rate.html' %}
     {% include 'report/fc_ng_ratio.html' %}
+    {% include 'report/defect_intelligence.html' %}
+    {% include 'report/operator_reliability.html' %}
+    {% include 'report/program_review_queue.html' %}
+    {% include 'report/jobs_drilldown.html' %}
+    {% include 'report/throughput_downtime.html' %}
+    {% include 'report/capa_action_register.html' %}
+    {% include 'report/appendix.html' %}
 </body>
 </html>
