--- a/templates/report/cover.html
+++ b/templates/report/cover.html
@@ -1,14 +1,17 @@
 <section class="report-section cover-page">
-    <header>
-        <img src="{{ url_for('static', filename='images/company-logo.png') }}" alt="Company logo">
-        <h1>Integrated Report</h1>
+    <br>
+        <h1>
+            <img src="{{ url_for('static', filename='images/company-logo.png') }}" alt="Company logo" class="company-logo-pdf"/>
+            Integrated Report
+        </h1>
+        <br />
         <div class="report-details">
-            <p>{{ start }} - {{ end }}</p>
-            <p>{{ generated_at }}</p>
+            <p><b>report_range:</b> {{ start }} - {{ end }}</p>
+            <p><b>generated_at:</b> {{ generated_at }}</p>
             <p>{{ report_id }}</p>
-            <p>Thomas Schwartz</p>
+            <p><b>report author:</b> Thomas Schwartz</p>
+            <p><b>questions?:</b> &lt;{{ contact }}&gt;</p>
             <p>{{ confidentiality }}</p>
-            <p>&lt;{{ contact }}&gt;</p>
         </div>
     </header>
     {% if show_summary %}
