Rename Integrated Report to AOI Integrated Report

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
         <li class="nav-item">
           <a href="#">Reports <span class="arrow">&#9662;</span></a>
           <div class="dropdown">
-            <a href="{{ url_for('main.integrated_report') }}">Integrated Report</a>
+            <a href="{{ url_for('main.integrated_report') }}">AOI Integrated Report</a>
           </div>
         </li>
       </ul>
