--- a/templates/integrated_report.html
+++ b/templates/integrated_report.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Integrated Report</h2>
+<h2>AOI Integrated Report</h2>
 
 <div class="section-card">
   <div class="field-row">
