--- a/templates/report/cover.html
+++ b/templates/report/cover.html
@@ -2,7 +2,7 @@
     <br>
         <h1>
             <img src="{{ url_for('static', filename='images/company-logo.png') }}" alt="Company logo" class="company-logo-pdf"/>
-            Integrated Report
+            AOI Integrated Report
         </h1>
         <br />
         <div class="report-details">
