--- a/templates/report/index.html
+++ b/templates/report/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Integrated Report</title>
+    <title>AOI Integrated Report</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/report.css') }}">
 </head>
 <body>
