Add combined summary and TOC templates

--- a/templates/report/index.html
+++ b/templates/report/index.html
@@ -10,8 +10,7 @@
         {% include 'report/cover.html' %}
     {% endif %}
     {% if show_summary %}
-        {% include 'report/summary.html' %}
-        {% include 'report/toc.html' %}
+        {% include 'report/summary_toc.html' %}
     {% endif %}
     {% include 'report/yield_trend.html' %}
     {% include 'report/operator_reject.html' %}
