--- a/templates/report/operator_index.html
+++ b/templates/report/operator_index.html
@@ -10,8 +10,7 @@
         {% include 'report/cover.html' %}
     {% endif %}
     {% if show_summary %}
-        {% include 'report/operator_summary.html' %}
-        {% include 'report/operator_toc.html' %}
+        {% include 'report/operator_summary_toc.html' %}
     {% endif %}
     {% include 'report/operator_daily.html' %}
     {% include 'report/operator_assemblies.html' %}
