added chart title to assembly details for AOI Daily Report PDF

--- a/static/css/report.css
+++ b/static/css/report.css
@@ -227,6 +227,11 @@ pre,
     page-break-after: always;
 }
 
+.metrics-chart {
+    width: 100%;
+    height: auto;
+}
+
 @media print {
     .report-section {
         page-break-after: always;
