--- a/templates/report/aoi_daily/assembly_detail.html
+++ b/templates/report/aoi_daily/assembly_detail.html
@@ -21,7 +21,12 @@
         </tbody>
     </table>
     {% if asm.metricsChart %}
-    <img src="{{ asm.metricsChart }}" alt="Metrics Chart">
+    <div class="moat-charts">
+        <div class="chart metrics-chart">
+            <h3>AOI Metrics Over Time</h3>
+            <img src="{{ asm.metricsChart }}" alt="Metrics Chart">
+        </div>
+    </div>
     {% endif %}
     {% if asm.overlayChart %}
     <div class="moat-charts">
