Add avg and predicted false calls to assembly forecast

--- a/templates/assembly_forecast.html
+++ b/templates/assembly_forecast.html
@@ -17,6 +17,8 @@
         <th>Assembly</th>
         <th>Boards</th>
         <th>False Calls</th>
+        <th>Avg FC/Board</th>
+        <th>Pred FC</th>
         <th>Inspected</th>
         <th>Rejected</th>
         <th>Yield %</th>
